Update: Finalisasi halaman Kontak, Legal, dan Navigasi Terpadu

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,26 +1,28 @@
 {
   "navbar": {
-    "home": "الرئيسية",
+    "home": "الصفحة الرئيسية",
     "explorer": "المستكشف",
-    "validators": "المدققون",
+    "validators": "المصادقون",
+    "contact": "اتصل بنا",
+    "legal": "قانوني",
     "launch_app": "تشغيل التطبيق"
   },
   "hero": {
-    "chain_status": "معرف السلسلة: 77077 [مجمدة]",
-    "title": "بلوكشين كوانتوم باي",
-    "subtitle": "بنية تحتية للسيادة الرقمية تعتمد على Layer-1 مع توافق PoS+BFT عالي السرعة.",
+    "chain_status": "معرف الشبكة: 77077 [نشط]",
+    "title": "سلسلة كتل QuantumPay عالية السرعة",
+    "subtitle": "بناء السيادة الرقمية مع إجماع PoS+BFT آمن وشفاف ولامركزي لمستقبل التمويل العالمي.",
     "btn_explore": "استكشاف الشبكة",
     "btn_run_node": "تشغيل عقدة"
   },
   "infrastructure": {
-    "title": "بنية تحتية عالمية لامركزية",
-    "description": "تعمل شبكة كوانتوم باي فعليًا في 3 قارات عبر عقد المدقق الخاصة.",
+    "title": "البنية التحتية العالمية",
+    "description": "تتوزع عقد QuantumPay عبر أفضل مراكز البيانات في العالم لضمان زمن وصول منخفض وأقصى درجات الأمان.",
     "card": {
       "online": "متصل",
-      "latency": "الكمون"
+      "latency": "زمن الاستجابة"
     }
   },
   "footer": {
-    "text": "© 2026 شبكة كوانتوم باي. جميع الأنظمة تعمل."
+    "text": "© 2026 شبكة QuantumPay الموزعة. جميع الحقوق محفوظة."
   }
 }
