Update Home: Finalize Manifesto Layout, Logo Size & Navbar

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,28 +1,33 @@
 {
   "navbar": {
-    "home": "الصفحة الرئيسية",
+    "home": "الرئيسية",
     "explorer": "المستكشف",
     "validators": "المصادقون",
     "contact": "اتصل بنا",
-    "legal": "قانوني",
+    "legal": "القانونية",
     "launch_app": "تشغيل التطبيق"
   },
   "hero": {
-    "chain_status": "معرف الشبكة: 77077 [نشط]",
-    "title": "سلسلة كتل QuantumPay عالية السرعة",
-    "subtitle": "بناء السيادة الرقمية مع إجماع PoS+BFT آمن وشفاف ولامركزي لمستقبل التمويل العالمي.",
-    "btn_explore": "استكشاف الشبكة",
-    "btn_run_node": "تشغيل عقدة"
+    "chain_status": "الشبكة الرئيسية ألفا تعمل",
+    "title": "درع السيادة",
+    "subtitle": "معايير وادي السيليكون، روح رمح الخيزران.",
+    "btn_explore": "استكشف الشبكة",
+    "btn_run_node": "شغّل عقدة"
+  },
+  "manifesto": {
+    "title": "بيان التكوين",
+    "asymmetric_title": "التحدي غير المتماثل",
+    "asymmetric_desc": "بني على أجهزة قديمة لإثبات أن السيادة تولد من الدقة الفكرية، وليس من رفاهية المكاتب.",
+    "compliance_title": "الامتثال العالمي",
+    "compliance_desc": "نركز على الإمارات وسنغافورة وسويسرا لضمان بنية تحتية قانونية مقاومة للكم.",
+    "tier_title": "استراتيجية السوق العالمية (المستوى 1-4)",
+    "tier_1": "المستوى 1 (الآن): الإمارات، سنغافورة، سويسرا",
+    "tier_4": "المستوى 4 (الوطن): إندونيسيا (مركز البحث والتطوير)"
   },
   "infrastructure": {
-    "title": "البنية التحتية العالمية",
-    "description": "تتوزع عقد QuantumPay عبر أفضل مراكز البيانات في العالم لضمان زمن وصول منخفض وأقصى درجات الأمان.",
-    "card": {
-      "online": "متصل",
-      "latency": "زمن الاستجابة"
-    }
+    "title": "حالة الشبكة العالمية"
   },
   "footer": {
-    "text": "© 2026 شبكة QuantumPay الموزعة. جميع الحقوق محفوظة."
+    "text": "© 2026 البنية التحتية السيادية لـ QuantumPay"
   }
 }
